# vision_pkg

./: .gitignore  README.md  back_in.sh  export.sh  node_crop.py  origin_detect.py  pid.cc  pid.hpp  requirements.txt  test_bind.py
HDMI_Display/: package.xml  setup.cfg  setup.py
HDMI_Display/HDMI_Display/: Display_node.py
HDMI_Display/config/: params.yaml
HDMI_Display/launch/: hdmi.launch.py
deep_sort_realtime/: deepsort_tracker.py
deep_sort_realtime/embedder/: embedder_pytorch.py
deepsort/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
deepsort/launch/: track_and_control.launch.py
deepsort/vision_pkg_deepsort/: camera_rdksrcam.py  deepsort_lockon.py  track_and_control_node.py  utils.py
deepsort/vision_pkg_deepsort/detectors/: __init__.py  detector_adapter.py
dnn_origin_pkg/dnn_node_example/: CMakeLists.txt  package.xml
identify/: CMakeLists.txt  package.xml
identify/msg/: DpSTracker.msg  YoloDetection.msg  YoloDetections.msg
mipi_camera/: package.xml  setup.cfg  setup.py
mipi_camera/config/: params.yaml
mipi_camera/launch/: cam.launch.py
mipi_camera/mipi_camera/: camera_node.py
mipi_detect/: package.xml  setup.cfg  setup.py
mipi_detect/config/: config.json  m_params.yaml  params.yaml
mipi_detect/launch/: detect.launch.py  mutil_detect.launch.py
mipi_detect/mipi_detect/: detect_crop_thread_node.py  detect_node.py  lib.py  servo.py  track_deepsort.py  tracker.py  utils.py
msg_test/: package.xml  setup.cfg  setup.py
robot_bringup/: package.xml  setup.py
yolo_detect/: package.xml  setup.cfg  setup.py
(+16 files in other folders)
